# ContextForge

./: .env.example  .gitignore  CLAUDE.md  CONTEXTFORGE_CAREERFORGE_ARCHITECTURE.md  README.md  contextforge_claude_code_brief.md  contextforge_ref_architecture.html  contextforge_review_recommendations.md  deepseek_text_20260408_8e2379.txt  docker-compose.yml
engine/: pyproject.toml
engine/contextforge/: config.py
engine/contextforge/agents/: action_agent.py  analysis_agent.py  capabilities.py  deps.py  error_recovery.py  graph.py  memory_manager.py  model_router.py  orchestrator.py  retrieval_agent.py  runtime.py  schemas.py  state.py
engine/contextforge/api/: auth.py  deps.py  main.py
engine/contextforge/connectors/: base.py  config_repo.py  registry.py  runtime.py  sinks.py
engine/contextforge/context/: cache.py  engine.py  pruner.py  retrieval_router.py
engine/contextforge/db/: migrations.py  neo4j.py  postgres.py  qdrant.py  redis.py  timescale.py
engine/contextforge/evolution/: quality_improvement.py  sandbox_provider.py  schema_discovery.py  strategy_optimizer.py  tool_forge.py
engine/contextforge/governance/: approval_queue.py  audit_trail.py  autonomy_controller.py
engine/contextforge/guardrails/: hallucination_checker.py  layer.py  pdpa_sg.py  pii_detector.py  presidio_pii.py  toxicity.py
engine/contextforge/ingestion/: __init__.py  clinical_tools.py  excel_import.py  fhir_r4.py  skill_based_ingester.py  ssg_taxonomy.py  stream_ingester.py  synthetic.py
engine/contextforge/knowledge/: embedding_service.py  entity_resolution.py  schema_free_extractor.py  temporal_graph.py
engine/contextforge/mcp_servers/: api_server.py  compute_server.py  document_server.py  graph_tools.py  sql_server.py  timeseries_tools.py  vector_tools.py
engine/contextforge/observability/: cost_tracker.py  trace_decorators.py
engine/contextforge/onboarding/: competency_questions.py  domain_wizard.py  guardrail_generator.py  schema_generator.py  template_generator.py  tool_generator.py
engine/contextforge/pipelines/: __init__.py  dag.py  runner.py  temporal_runner.py  worker.py
engine/contextforge/skills/: __init__.py  (+5 more)
engine/tests/: test_careerforge_foundation.py  test_connectors.py  test_graph_nodes.py  test_pipelines.py  test_skill_hot_reload.py  test_smoke.py  test_tenancy.py
(+259 files in other folders)
