[project]
name = "contextforge"
version = "0.1.0"
description = "AI-native, sector-agnostic context engineering platform"
requires-python = ">=3.12"
license = {text = "MIT"}

dependencies = [
    # ─── API Framework ──────────────────────────────
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",

    # ─── Agent Runtime (PydanticAI + LangGraph hybrid) ─
    "pydantic-ai>=1.72.0",
    "langgraph>=1.0.6",
    "langgraph-checkpoint-postgres>=3.0.3",
    "langchain-core>=0.3.0",

    # ─── LLM Gateway ───────────────────────────────
    "litellm>=1.50.0",

    # ─── Observability ──────────────────────────────
    "langfuse>=3.0.0",

    # ─── Databases ──────────────────────────────────
    "neo4j>=5.23.0",
    "asyncpg>=0.30.0",
    "psycopg[binary]>=3.2.0",
    "qdrant-client>=1.12.0",
    "redis[hiredis]>=5.0.0",

    # ─── GraphRAG ───────────────────────────────────
    "neo4j-graphrag>=1.4.0",

    # ─── Skills System ──────────────────────────────
    "python-frontmatter>=1.1.0",
    "pyyaml>=6.0.0",

    # ─── Utilities ──────────────────────────────────
    "tiktoken>=0.7.0",
    "tenacity>=9.0.0",

    # ─── Reports / Excel ────────────────────────────
    "openpyxl>=3.1.0",

    # ─── Filesystem watchers (skill hot-reload) ─────
    "watchfiles>=0.24.0",
]


[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.7.0",
    "mypy>=1.12.0",
]
# Opt-in NER-based PII detection. Adds ~1GB of spaCy model download on first run.
presidio = [
    "presidio-analyzer>=2.2.0",
    "presidio-anonymizer>=2.2.0",
]

[build-system]
requires = ["setuptools>=75.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["contextforge*"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true

[[tool.mypy.overrides]]
module = ["asyncpg", "frontmatter"]
ignore_missing_imports = true
